Changes for 1.1.5:

 - improved 'service_status[*]' allowed service name and display name (Eugnene)
 - added error reporting of PostgreSQL for frontend (Eugene)
 - added 'with oids' to PostgreSQL table definitions (Alexei)
 - fixed sms sender (Eugene)
 - improved errors messaging of startups (Eugene)
 - fixed hostname receaving on startup of ZABBIX agent (Eugene)
 - fixed printing of stdout/stderr (Eugene)
 - fixed buffer overflow while processing SNMP IP addresses (Alexei)
 - fixed agent's calculation of network statistics (Alexei)
 - fixed some compilation warnings (Alexei)
 - fixed "not equal" condition for hosts and host groups in actions (Alexei)
 - added support of macro TRIGGER.URL and TRIGGER.COMMENT (Alexei)
 - fixed dependences of item deletion (Eugene)
 - added "Host group" element for maps (Eugene)
 - fixed Y asix value displaying for graphs (Eugene)

Changes for 1.1.4:

 - fixed processing of web.page.regexp[] (Alexei)
 - added images import script for Oracle (Eugene)
 - fixed warning displaying (Eugene)
 - added sorting by host in graph selection for screen element (Eugene)
 - fixed 'service_status[*]' for WinXX system (Eugene)
 - fixed trigger function fuzzytime() (Alexei)
 - fixed graph displaying with period 1d - 2d8h (Eugene)
 - fixed hosts remembering for graphs (Eugene)
 - fixed processing of unit "uptime" (Alexei)
 - support of ListenIP for ZABBIX server (Alexei)
 - changed PostgreSQL last OID function to pg_last_oid() (Alexei)
 - fix for start time in graph navigation (Alexei)
 - minor fix for Spanish translation (Alexei)
 - fixed default config name for zabbix_agent (Alexei)
 - fixed swapped system CPU and nice CPU stats in ZABBIX agent (Alexei)
 - fixed processing of item calculated as delta speed per second (Alexei)

Changes for 1.1.3:

 - added Dutch tranlation (Alexei)
 - fixed multipliers fo disk statistics in data.sql (Alexei)
 - fixed processing of SNMP HEX and OCTET string values (Alexei)